k8s-config/java-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 45-79-245-76.ip.linodeusercontent.com
    http:
      paths:
      - backend:
          service:
            name: java-app-service
            port:
              number: 8080
        pathType: Exact
        path: /
